recursion.cons.min.Min.scala.error
Erreur de compilation :
Min:9: error: value head_= is not a member of List[Int]
  if(l.head=l.tail.head)
       ^Min:9: error: type mismatch;
 found   : Unit
 required: Int
  if(l.head=l.tail.head)
  ^